# iclock-sync

./: .env  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  cli.py  main.py  pyproject.toml  requirements.lock.txt  requirements.txt
cache/: uploaded_ids_cache.json
config/: Start iClock.xml  newRun.bat  run.bat  run_iClock.bat  run_iClock_v2.bat  settings.py
core/: firestore_uploader.py  iclock_connector.py  normalizer.py  utils.py
data/: sample_logs.json
docs/: BUG_ANALYSIS_AND_FIXES.md  BUG_REPORT_ICLOCK_EMPTY_STAFFID.md
feature/: staff_info.py  time_logs.py
output/: logs_20250325_105040.json
scripts/: build_cache_from_output.py
